--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "pwn-backemd",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/prayerwarriorsnewsletter/pwn-backend/issues"
   },
-  "homepage": "https://github.com/prayerwarriorsnewsletter/pwn-backend#readme"
+  "homepage": "https://github.com/prayerwarriorsnewsletter/pwn-backend#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2"
+  }
 }
