--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/prayerwarriorsnewsletter/pwn-backend#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "knex": "^0.20.11",
+    "sqlite3": "^4.1.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.2"
   }
 }
