--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase-admin": "^8.10.0",
     "knex": "^0.20.11",
     "sqlite3": "^4.1.1"
   },
